fix scrollbar

--- a/components/Layout/styles.module.scss
+++ b/components/Layout/styles.module.scss
@@ -1,35 +1,20 @@
 @import "styles/theme.scss";
 
 .view {
-  position: relative;
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: $Secondary;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  &::-webkit-scrollbar {
-    width: 0;
-  }
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
-    border-radius: 2px;
-  }
 }
 
 .background {
   display: grid;
-  height: 100vh;
   place-items: center;
 }
 
 @media (min-width: $Movile-Breakpoint) {
   .view {
     width: $Movile-Breakpoint;
-    height: 98%;
     border-radius: 10px;
   }
 }
